# FAMM

./: .gitignore  CHANGELOG.md  CHANGELOG_REVIEW.md  CITATION.cff  FINAL_IEEE_REVIEW.md  FINAL_SUBMISSION_CHECKLIST.md  README.md  REPOSITORY_AUDIT.md  REPRODUCIBILITY.md  SUBMISSION_VALIDATION.md  compile_latex.py  generate_csv_results.py  generate_figures.py  generate_paper_figures.py  pyproject.toml  reproduce.sh  requirements.txt  run_experiment.py  run_full_experiments.py  run_large_scale_experiments.py
backend/: __init__.py
backend/consolidation/: __init__.py  cluster_engine.py  consolidation_policy.py  consolidator.py  summarizer.py
backend/forgetting_engine/: __init__.py  decay_scheduler.py  ebbinghaus_baseline.py  pruner.py  utility_decay.py
backend/future_utility_predictor/: __init__.py  baseline_heuristic.py  feature_extractor.py  model_search.py  predictor.py  scoring_model.py
backend/goal_retrieval/: __init__.py  goal_encoder.py  multi_signal_ranker.py  retriever.py
backend/memory_engine/: __init__.py  event_bus.py  lifecycle_controller.py  memory_manager.py  memory_record.py
backend/vector_database/: __init__.py  base_adapter.py  chroma_adapter.py  embedding_service.py  faiss_adapter.py
baselines/: __init__.py  baseline_systems.py
config/: __init__.py  default.yaml  settings.py
datasets/: README.md
evaluation/: __init__.py  advanced_metrics.py  benchmark_consolidation.py  data_generator.py  experiment_runner.py  metrics.py
experiments/results/: ablation_results.csv  full_experiment_results.json  large_scale_results.json  metrics.csv  synthetic_research_agent_20260701_170811.json
paper/: appendix.tex  main.tex  references.bib
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_event_bus.py  test_lifecycle_controller.py  test_memory_record.py  test_ranker_and_consolidation.py  (+1 more)
